--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -114,4 +114,8 @@
         <string name="network_traffic_state_summary">Show net activity in statusbar</string>
         <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
 
+    <!-- Toast app icon -->
+    <string name="toast_icon_title">Toast app icon</string>
+    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
+
 </resources>
