--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,7 +55,27 @@
         <string name="qs_rows_landscape_title">Tiles Rows on Landscape</string>
         <string name="qs_columns_portrait_title">Tiles Columns on Portrait</string>
         <string name="qs_columns_landscape_title">Tiles Columns on Landscape</string>
-
+        <!-- Custom Header Images -->
+        <string name="status_bar_custom_header_title">Enable</string>
+        <string name="header_provider_disabled">Disabled</string>
+        <string name="custom_header_title">Custom header image</string>
+        <string name="daylight_header_pack_title">Header image pack</string>
+        <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
+        <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
+        <string name="unit_percent">\u0025</string>
+        <string name="static_header_provider" translatable="false">static</string>
+        <string name="daylight_header_provider" translatable="false">daylight</string>
+        <string name="static_header_provider_title">Static</string>
+        <string name="daylight_header_provider_title">Dynamic</string>
+        <string name="custom_header_provider_title">Header provider</string>
+        <string name="custom_header_browse_title">Browse installed headers</string>
+        <string name="custom_header_browse_summary">Click on any image to use for static mode</string>
+        <string name="custom_header_browse_summary_new">Browse all available header packages</string>
+        <string name="custom_header_pick_title">Select header image</string>
+        <string name="custom_header_pick_summary">Select an image to use for static mode</string>
+        <string name="style_enabled_summary">Custom header image is ON</string>
+        <string name="style_disabled_summary">Custom header image is OFF</string>
+    
     <!-- USB Connection -->
     <string name="usb_armory_title">USB Interface</string>
          <!-- Wake on Plug -->
