--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,8 +14,11 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
     <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
     <!-- NavBar -->
     <string name="double_tap_sleep_navbar">Double tap to sleep on navbar</string>
+    <!-- Lockscreen -->
+    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
 
 </resources>
