--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,12 @@
     <!-- QuickSettings and Notification Drawer -->
     <string name="drawer_armory_title">Notification Drawer</string>
         <string name="quick_pulldown_title">Right handed quick pulldown</string>
+        <!-- QS rows and columns -->
+        <string name="qs_rows_columns_title">Quick Tiles Rows and Columns</string>
+        <string name="qs_rows_portrait_title">Tiles Rows on Portrait</string>
+        <string name="qs_rows_landscape_title">Tiles Rows on Landscape</string>
+        <string name="qs_columns_portrait_title">Tiles Columns on Portrait</string>
+        <string name="qs_columns_landscape_title">Tiles Columns on Landscape</string>
 
     <!-- USB Connection -->
     <string name="usb_armory_title">USB Interface</string>
