--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,8 +19,30 @@
     <string name="settings_advanced_title">Advanced</string>
 
     <!-- HW Keys -->
-    <string name="hwkeys_armory_title">Hardware Keys</string>
+    <string name="hwkeys_armory_title">Hardware keys</string>
+        <string name="hwkeys_title">HWKeys Rebinding</string>
         <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
+        <!-- Hardware keys -->
+        <string name="hardware_keys_home_key_title">Home button</string>
+        <string name="hardware_keys_menu_key_title">Menu button</string>
+        <string name="hardware_keys_back_key_title">Back button</string>
+        <string name="hardware_keys_short_press_title">Short press action</string>
+        <string name="hardware_keys_long_press_title">Long press action</string>
+        <string name="hardware_keys_double_tap_title">Double tap action</string>
+        <string name="hardware_keys_action_nothing">No action</string>
+        <string name="hardware_keys_action_menu">Open/close menu</string>
+        <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
+        <string name="hardware_keys_action_search">Search assistant</string>
+        <string name="hardware_keys_action_voice_search">Voice search</string>
+        <string name="hardware_keys_action_in_app_search">In-app search</string>
+        <string name="hardware_keys_action_launch_camera">Launch camera</string>
+        <string name="hardware_keys_action_sleep">Turn screen off</string>
+        <string name="hardware_keys_action_last_app">Last app</string>
+        <string name="hardware_keys_action_split_screen">Split screen</string>
+        <!-- Kill app long press back -->
+        <string name="kill_app_longpress_back">Kill app back button</string>
+        <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
+
 
     <!-- NavBar -->
     <string name="navbar_armory_title">Navigation Bar</string>
