--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -56,6 +56,8 @@
         <string name="backlight_timeout_30s">30 sec</string>
         <!-- Enable keys backlight-->
         <string name="button_brightness_title">Backlight</string>
+        <!-- Enabble HW keys -->
+        <string name="enable_hw_keys_title">Enable hardware keys</string>
 
 
     <!-- NavBar -->
