--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,17 @@
     <string name="navbar_settings_title">Navigation Bar</string>
         <string name="double_tap_sleep_navbar">Double tap to sleep on navbar</string>
 
+    <!-- Power Menu -->
+    <string name="powermenu_settings_title">Power Menu</string>
+        <string name="powermenu_power">Power</string>
+        <string name="powermenu_restart">Restart</string>
+        <string name="powermenu_restart_recovery">Advanced restart</string>
+        <string name="powermenu_airplane">Airplane</string>
+        <string name="powermenu_settings">Settings</string>
+        <string name="powermenu_lockdown">Lock Down</string>
+        <string name="powermenu_soundpanel">Sound Panel</string>
+        <string name="powermenu_users">Users</string>
+
     <!-- Lockscreen -->
     <string name="lockscreen_settings_title">LockScreen</string>
         <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
