--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,6 +65,10 @@
         <string name="double_tap_sleep_navbar">Double tap to sleep on navbar</string>
         <string name="navigation_bar_ime_button_title">Show IME navigation bar button</string>
         <string name="navigation_bar_ime_button_summary">Input switcher in navigation bar</string>
+        <string name="navigation_bar_show_title">Show navigation bar</string>
+        <string name="navigation_bar_show_summary">Force enable navigation bar</string>
+        <string name="hardware_keys_disable_title">Disable keys</string>
+        <string name="hardware_keys_disable_summary">Force disable hardware keys</string>
 
     <!-- Power Menu -->
     <string name="powermenu_armory_title">Power Menu</string>
