ae: Lockscreen Charging info  (2/3)
Change-Id: I583fc31f7273106206803806dcb043e95119f1c4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,6 +37,9 @@
     <!-- Lockscreen -->
     <string name="lockscreen_armory_title">LockScreen</string>
         <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
+        <!-- Lockscreen battery info indicator  -->
+        <string name="lockscreen_battery_info_title">Battery info</string>
+        <string name="lockscreen_battery_info_summary">Display negotiated charger max current-voltage and battery temperature on lockscreen while charging</string>
 
     <!-- QuickSettings and Notification Drawer -->
     <string name="drawer_armory_title">Notification Drawer</string>
