--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,4 +47,8 @@
         <string name="vibration_on_charge_state_changed_title">Vibrate on plug</string>
         <string name="vibration_on_charge_state_changed_summary">Vibrate when connecting or disconnecting a power source</string>
 
+    <!-- StatusBar -->
+    <string name="statusbar_armory_title">Status Bar</string>
+        <string name="double_tap_sleep_statusbar">Double tap to sleep on statusbar</string>
+
 </resources>
